--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>About Me></h2>
         <div class="about-content">
         <!-- Add your image here -->
-        <img src="images/about.JPEG.JPEG" alt="Benita Benny" class="about-image">
+        <img src="images/about.jpeg.JPEG" alt="Benita Benny" class="about-image">
 
         <p>Hi Y'all ! I’m Benita Benny from Kochi, and I’m currently a student at Government Engineering College, Palakkad, studying technology and programming.
             I’m passionate about web development, video editing, and photography. I enjoy building websites and editing videos to share creative stories. Photography is something I love as it helps me capture special moments and express my "not so artistic side"
